Fix letter-spacing issues

--- a/app/home/components/achieveSection/achieveSection.scss
+++ b/app/home/components/achieveSection/achieveSection.scss
@@ -93,14 +93,12 @@ $container-width: 1080px;
     font-size: 18px;
     font-weight: 300;
     line-height: 1.56;
-    letter-spacing: -0.8px;
     text-align: left;
     color: #0c1020;
 
     &.itemTitle {
       font-size: 20px;
       line-height: 1.42;
-      letter-spacing: -0.8px;
       text-align: left;
       color: #6096ff;
 
@@ -128,12 +126,10 @@ $container-width: 1080px;
     p {
       font-size: 14px;
       line-height: 1.82;
-      letter-spacing: -0.6px;
 
       &.itemTitle {
         font-size: 14px;
         line-height: 1.82;
-        letter-spacing: -0.6px;
       }
     }
   }
